<resources>
    <string name="app_name">Call Recorder</string>

    <string name="action_settings">Settings</string>
    <string name="action_ignore">Ignore List</string>
    <string name="action_record">Record List</string>
    <string name="action_favorite">Favorite List</string>
    <string name="action_search">Search</string>
    <string name="action_information">Information</string>

    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No audio found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
</resources>
