<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zen.callrecorder.Activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ignore"
        android:orderInCategory="100"
        android:title="@string/action_ignore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_record"
        android:orderInCategory="100"
        android:title="@string/action_record"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/calendar"
        android:title="Order"/>
</menu>
